fix: Container log line too long

--- a/src/components/Cards/ContainerLog/index.scss
+++ b/src/components/Cards/ContainerLog/index.scss
@@ -53,7 +53,7 @@
     color: #b7c4d1;
     font-weight: 600;
     line-height: 20px;
-    white-space: pre;
+    white-space: pre-wrap;
 
     strong {
       color: $yellow;
